adjustments to characters

--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -566,5 +566,5 @@ npc:
     #
     personality: |
       Riley is a young and pretty Drow with long black hair with dyed pink tips, deep red eyes and dark gray skin. She has a lithe, muscular body that she wraps in silk tights and light, black, leather armor. She is perky 
-      and plucky, is all about fashion and friends, but unlike many of her peers, has a strong work ethic and believes that he job is very important
+      and plucky, is all about fashion and friends, but unlike many of her peers, she has a strong work ethic and believes that he job is very important
 
