--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -39,7 +39,6 @@
 #
 # (There might be other formatting systems worth considering, too!)
 #
-
 #
 # Currently there is no schema for this template.
 # It will take some time to create a validating schema, so that,
@@ -134,7 +133,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Abrinet of Dire Dawa ('Riley')
+  name: Abrinet of Dire Dawa
 
   #
   # The NPC artwork.
