--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -133,7 +133,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Abrinet of Dire Dawa
+  name: Abrinet of Dire Dawa ('Riley')
 
   #
   # The NPC artwork.
